don't make use of gauava in tests